--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,3 +21,5 @@ test_script:
   - pwsh: Invoke-Pester -EnableExit -OutputFormat NUnitXml -OutputFile TestsResults.CLI.xml
   - pwsh: (New-Object 'System.Net.WebClient').UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestsResults.CLI.xml))
 
+deploy_script:
+  - ps: Write-Output "Publishing...";Publish-Module -Name ChocolateyGet -NuGetApiKey "$env:PSGALLERYKEY"
